--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,11 +23,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  /* margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
 h1 {
@@ -55,14 +55,16 @@ button:focus-visible {
 }
 
 .card {
-  padding: 2em;
+  /* padding: 2em; */
 }
 
 #app {
-  max-width: 1280px;
+  width: 100%;
+  height: 100%;
+  /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: center; */
 }
 
 @media (prefers-color-scheme: light) {
@@ -76,4 +78,12 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+html, body {
+  background-color: #242000;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
