--- a/src/style.css
+++ b/src/style.css
@@ -82,8 +82,21 @@ button:focus-visible {
 
 html, body {
   background-color: #242000;
-  padding: 0;
+  /* padding: 0;
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: 100%; */
 }
+body{
+  width: 85%;
+  min-width: 780px;
+  max-width: 1260px;
+}
+html{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+
+}
+
