fix: 修复Dart Sass 报错

--- a/src/assets/scss/home/index.scss
+++ b/src/assets/scss/home/index.scss
@@ -1,7 +1,7 @@
 button{
-    color: $red;
+    // color: $red;
 }
 .text{
-    @include line-text-overflow;
+    // @include line-text-overflow;
     width: 50px;
 }
